--- a/roles/docker-registry/templates/docker-compose.yaml.j2
+++ b/roles/docker-registry/templates/docker-compose.yaml.j2
@@ -1,27 +1,32 @@
-registry:
-  restart:                          always
-  image:                            registry:2
+nginx:
+  image: "nginx:1.9"
   ports:
-    - 5000:5000
-  environment:
-    REGISTRY_HTTP_TLS_CERTIFICATE: /certs/domain.crt
-    REGISTRY_HTTP_TLS_KEY: /certs/domain.key
-    REGISTRY_AUTH: htpasswd
-    REGISTRY_AUTH_HTPASSWD_PATH: /auth/htpasswd
-    REGISTRY_AUTH_HTPASSWD_REALM: Registry Realm
-  storage:
-    REGISTRY_STORAGE_SWIFT_USERNAME:
-    REGISTRY_STORAGE_SWIFT_PASSWORD:
-    REGISTRY_STORAGE_SWIFT_AUTHURL:                      https://storage.myprovider.com/auth/v1.0 or https://storage.myprovider.com/v2.0 or https://storage.myprovider.com/v3/auth
-    REGISTRY_STORAGE_SWIFT_TENANT:
-    REGISTRY_STORAGE_SWIFT_DOMAIN:
-    REGISTRY_STORAGE_SWIFT_INSECURESKIPVERIFY:           true
-    REGISTRY_STORAGE_SWIFT_REGION:                       fr
-    REGISTRY_STORAGE_SWIFT_CONTAINER:                    registry
-#    REGISTRY_STORAGE_SWIFT_ROOTDIRECTORY:                /docker-images
+    - 443:443
+  links:
+    - registry:registry
+  volumes:
+    - /usr/local/sbin/nginx/:/etc/nginx/conf.d
+
+registry:
+  image:                              registry:2
+  restart_policy:                     always
+  ports:
+  - "5000:5000"
+  env:
+    REGISTRY_HTTP_TLS_CERTIFICATE:    "{{ certs_directory }}{{ playbook_name }}-{{ inventory_hostname }}.crt"
+    REGISTRY_HTTP_TLS_KEY:            "{{ certs_directory }}{{ playbook_name }}-{{ inventory_hostname }}.key"
+    REGISTRY_STORAGE:                 swift
+    REGISTRY_STORAGE_SWIFT_USERNAME:  "{{ os_auth_params.username }}"
+    REGISTRY_STORAGE_SWIFT_PASSWORD:  "{{ os_auth_params.password }}"
+    REGISTRY_STORAGE_SWIFT_AUTHURL:   "{{ os_auth_params.auth_url }}"
+    REGISTRY_STORAGE_SWIFT_TENANT:    "{{ os_auth_params.project_name }}"
+    REGISTRY_STORAGE_SWIFT_DOMAIN:    "{{ os_auth_params.project_domain_name }}"
+    REGISTRY_STORAGE_SWIFT_REGION:    "{{ os_auth_region_name }}"
+    REGISTRY_STORAGE_SWIFT_CONTAINER: "{{ playbook_name }}"
+    REGISTRY_STORAGE_SWIFT_INSECURESKIPVERIFY: yes
   maintenance:
     uploadpurging:
-      enabled: true
-      age: 168h
-      interval: 24h
-      dryrun: false
+      enabled:                        true
+      age:                            168h
+      interval:                       24h
+      dryrun:                         false
